@@ -7,6 +7,8 @@
 
 * Fixed exception when exiting using Ctrl+c from shell
 
+* Fixed exception when rules files is not provided
+
 * Documentation updated
 
 
